# ee

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  Cargo.toml  ISSUES.md  LICENSE  README.md  RULE.md  install.sh  tasks.yaml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/hooks/: atlas-copilot.json
.github/workflows/: bench-smoke.yml  ci.yml  fuzz.yml  release.yml
.mk/vault/: .vault-meta.toml
.mk/vault/local/agents/: data.asc
crates/ee-cli/: Cargo.toml  build.rs
crates/ee-cli/benches/: vlf.rs
crates/ee-cli/src/: backend.rs  buffer.rs  config.rs  git.rs  highlight.rs  keymap.rs  lib.rs  main.rs  perf.rs  quickfix.rs  session.rs  terminal.rs  tests.rs  text.rs  theme.rs  ui.rs  vlf_bench_support.rs
crates/ee-cli/src/app/: commands.rs  mod.rs  parsing.rs  state.rs
crates/ee-ts-test-grammars/: Cargo.toml
crates/ee-ts-test-grammars/src/: lib.rs
crates/ee-tui/: Cargo.toml
crates/ee-tui/benches/: vlf.rs
crates/ee-tui/src/: app.rs  backend.rs  buffer.rs  config.rs  folds.rs  git.rs  highlight.rs  keymap.rs  lib.rs  main.rs  picker.rs  quickfix.rs  registers.rs  render_metrics.rs  terminal.rs  tests.rs  text.rs  ui.rs  vlf_bench_support.rs  window.rs
crates/ee-tui/src/app/: commands.rs  mod.rs  parsing.rs  state.rs
crates/experimental/xi-lang/: Cargo.toml  manifest.toml
crates/experimental/xi-lang/benches/: peg_tests.rs
crates/experimental/xi-lang/src/: main.rs  parser.rs  peg.rs  statestack.rs
crates/experimental/xi-lang/src/language/: plaintext.rs  rust.rs
crates/sample-plugin/src/: main.rs
crates/xi-core/: Cargo.toml
crates/xi-core-lib/: Cargo.toml
crates/xi-core-lib/benches/: wrap.rs
crates/xi-core-lib/src/: annotations.rs  backspace.rs  client.rs  config.rs  core.rs  edit_ops.rs  edit_types.rs  editor.rs  event_context.rs  file.rs  find.rs  index_set.rs  lang_features.rs  layers.rs  lib.rs  line_cache_shadow.rs  line_ending.rs  line_offset.rs  linewrap.rs  movement.rs  object.rs  open_policy.rs  recorder.rs  rpc.rs  runtime_loader.rs  selection.rs  styles.rs  syntax.rs  tabs.rs  tracing_support.rs  tree_sitter_support.rs  view.rs  watcher.rs  whitespace.rs  whole_scan.rs  width_cache.rs  word_boundaries.rs
crates/xi-core-lib/src/plugins/: catalog.rs  manifest.rs  mod.rs  rpc.rs  wasm.rs
crates/xi-core-lib/src/text_store/: mod.rs  rope_store.rs
crates/xi-core-lib/src/vlf/: mod.rs  overlay.rs  page_index.rs  pager.rs  save.rs  search.rs  store.rs
crates/xi-core-lib/tests/: rpc.rs
crates/xi-core/src/: main.rs
crates/xi-lsp-lib/: Cargo.toml  manifest.toml
crates/xi-lsp-lib/src/: conversion_utils.rs  language_server_client.rs  lib.rs  lsp_plugin.rs  result_queue.rs  types.rs  utils.rs
crates/xi-lsp-lib/tests/: migration_regression.rs
crates/xi-lsp-lib/tests/support/: fake_language_server.rs
crates/xi-plugin-derive/: Cargo.toml
crates/xi-plugin-derive/src/: lib.rs
crates/xi-plugin-lib/: Cargo.toml
crates/xi-plugin-lib/src/: base_cache.rs  core_proxy.rs  dispatch.rs  lib.rs  state_cache.rs  view.rs  wasm.rs
crates/xi-plugin-lib/tests/: derive.rs  process_lifecycle.rs
crates/xi-rope/: Cargo.toml
crates/xi-rope/benches/: cursors.rs  diff.rs  edit.rs  metadata_layout.rs  rope_builder.rs
crates/xi-rope/examples/: ropetoy.rs
crates/xi-rope/proptest-regressions/: engine.txt
crates/xi-rope/src/: breaks.rs  compare.rs  delta.rs  diff.rs  engine.rs  find.rs  interval.rs  lib.rs  multiset.rs  rope.rs  serde_impls.rs  spans.rs  tree.rs
crates/xi-rpc/: Cargo.toml
crates/xi-rpc/examples/: try_chan.rs
crates/xi-rpc/src/: error.rs  lib.rs  parse.rs  test_utils.rs  transport.rs
crates/xi-rpc/tests/: integration.rs
crates/xi-trace/: Cargo.toml
crates/xi-trace/src/: chrome_trace_dump.rs  fixed_lifo_deque.rs  lib.rs  sys_pid.rs  sys_tid.rs
crates/xi-unicode/: Cargo.toml
crates/xi-unicode/benches/: bench.rs
crates/xi-unicode/examples/: runtestdata.rs
crates/xi-unicode/src/: lib.rs  tables.rs
crates/xi-unicode/tests/: linebreaktest.rs
crates/xi-unicode/tools/: mk_tables.py
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: xi_core_config.rs  xi_core_text.rs  xi_lsp_transport.rs  xi_plugin_wasm.rs  xi_rope_compare.rs  xi_rope_crdt.rs  xi_rpc_parse.rs  xi_unicode_text.rs
fuzz/src/: lib.rs
fuzz/tests/: xi_core_text_regressions.rs  xi_rope_compare_regressions.rs
references/: .gitignore  helix-deep-research.md  runtime-tree-sitter-loader-architecture.md  vlf-deep-research.md  vlf-visible-range-parsing.md  vscode-limits.md
schemas/: ee-config.schema.json
scripts/: build-runtime.sh  compare-head-speed.sh  compare-line-check-speed.sh  compare-tail-speed.sh  fetch-gh-run-logs.sh  gen_text_fixture.sh  install-plugins.sh  install-tree-sitter-runtime.sh  release.sh  test-workspace-summary.sh
scripts/tests/: test-gen-text-fixture.sh  test-install-plugins.sh  test-install-tree-sitter-runtime.sh  test-pre-commit.sh  test-test-workspace-summary.sh
test_assets/: .gitignore  sample-program.cpp  sample-program.go  sample-program.pas  sample-program.rs
