[workspace]
resolver = "3"
members = [
  "crates/ee-tui",
  "crates/xi-core-lib",
  "crates/xi-core",
  "crates/xi-lsp-lib",
  "crates/xi-plugin-lib",
  "crates/xi-rope",
  "crates/xi-rpc",
  "crates/xi-unicode",
]
default-members = ["crates/ee-tui"]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
bincode = "1.3.3"
bytecount = "0.6.9"
chrono = "0.4.44"
crossbeam-channel = "0.5"
crossterm = "0.28"
dirs = "6.0.0"
fern = "0.6.2"
jsonrpc-lite = "0.7.0"
lsp-types = "0.97.0"
libc = "0.2.186"
log = "0.4.29"
memchr = "2.8.0"
notify = "6"
rand = "0.9"
ratatui = "0.29"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
syntect = { version = "5.3.0", default-features = false, features = ["default-themes", "parsing", "dump-load", "dump-create", "plist-load", "yaml-load", "regex-fancy"] }
tempfile = "3"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
lsp-server = "0.7"
unicode-segmentation = "1.13.2"
url = "2.5.8"

xi-core-lib = { path = "crates/xi-core-lib", version = "0.4.0" }
xi-plugin-lib = { path = "crates/xi-plugin-lib", version = "0.1.0" }
xi-rope = { path = "crates/xi-rope", version = "0.3.0" }
xi-rpc = { path = "crates/xi-rpc", version = "0.3.0" }
xi-unicode = { path = "crates/xi-unicode", version = "0.3.0" }
