[workspace]
resolver = "3"
members = [
  "crates/ee-tui",
  "crates/xi-core-lib",
  "crates/xi-core",
  "crates/xi-lsp-lib",
  "crates/xi-plugin-derive",
  "crates/xi-plugin-lib",
  "crates/xi-rope",
  "crates/xi-rpc",
  "crates/xi-unicode",
  "fuzz",
]
default-members = ["crates/ee-tui"]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
bincode = "1.3.3"
bytecount = "0.6.9"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
chrono = "0.4.44"
crossbeam-channel = "0.5"
crossterm = "0.28"
dirs = "6.0.0"
fern = "0.6.2"
fs2 = "0.4"
jsonrpc-lite = "0.7.0"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
libc = "0.2.186"
log = "0.4.29"
memchr = "2.8.0"
notify = "6"
globset = "0.4"
ignore = "0.4"
jsonschema = "0.30"
rand = "0.9"
ratatui = "0.29"
regex = "1.12.3"
schemars = { version = "1.0", features = ["derive"] }
semver = "1.0"
signal-hook = "0.3"
serde = "1.0.228"
serde_json = "1.0.149"
seccompiler = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
syntect = { version = "5.3.0", default-features = false, features = ["default-themes", "default-syntaxes", "parsing", "dump-load", "dump-create", "plist-load", "yaml-load", "regex-fancy"] }
tempfile = "3"
tokio = { version = "1.52.1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7.18"
toml = "0.8"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
unicode-segmentation = "1.13.2"
url = "2.5.8"
wasmtime = { version = "44.0.0", default-features = false, features = ["cranelift", "runtime", "std", "wat"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }

xi-core-lib = { path = "crates/xi-core-lib", version = "0.4.0" }
xi-plugin-derive = { path = "crates/xi-plugin-derive", version = "0.1.0" }
xi-plugin-lib = { path = "crates/xi-plugin-lib", version = "0.1.0" }
xi-rope = { path = "crates/xi-rope", version = "0.3.0" }
xi-rpc = { path = "crates/xi-rpc", version = "0.3.0" }
xi-unicode = { path = "crates/xi-unicode", version = "0.3.0" }
