[workspace]
resolver = "3"
members = [
  "crates/ee-cli",
  "crates/ee-ts-test-grammars",
  "crates/xi-core-lib",
  "crates/xi-core",
  "crates/xi-lsp-lib",
  "crates/xi-plugin-derive",
  "crates/xi-plugin-lib",
  "crates/xi-rope",
  "crates/xi-rpc",
  "crates/xi-unicode",
  "fuzz",
]
default-members = ["crates/ee-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.95"

[workspace.dependencies]
bytecount = "0.6.9"
cc = "1.2"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
chrono = "0.4.44"
criterion = "0.5"
crossterm = "0.28"
dirs = "6.0.0"
fern = "0.6.2"
fs2 = "0.4"
jsonrpc-lite = "0.7.0"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
libc = "0.2.186"
log = "0.4.29"
memchr = "2.8.0"
notify = "6"
globset = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
jsonschema = "0.30"
rand = "0.9"
ratatui = "0.29"
regex = "1.12.3"
schemars = { version = "1.0", features = ["derive"] }
semver = "1.0"
signal-hook = "0.3"
serde = "1.0.228"
serde_json = "1.0.149"
seccompiler = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tempfile = "3"
tokio = { version = "1.52.1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7.18"
toml = "0.8"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-go = "0.25.0"
tree-sitter-haskell = "0.23.1"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-loader = "0.26.8"
tree-sitter-php = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-scala = "0.26.0"
tree-sitter-typescript = "0.23.2"
unicode-segmentation = "1.13.2"
unicode-width = "0.2"
url = "2.5.8"
wasmtime = { version = "44.0.0", default-features = false, features = ["cranelift", "runtime", "std", "wat"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }

xi-core-lib = { package = "ee-xi-core-lib", path = "crates/xi-core-lib", version = "0.8.4" }
xi-plugin-derive = { package = "ee-xi-plugin-derive", path = "crates/xi-plugin-derive", version = "0.8.4" }
xi-plugin-lib = { package = "ee-xi-plugin-lib", path = "crates/xi-plugin-lib", version = "0.8.4" }
xi-rope = { package = "ee-xi-rope", path = "crates/xi-rope", version = "0.8.4" }
xi-rpc = { package = "ee-xi-rpc", path = "crates/xi-rpc", version = "0.8.4" }
xi-unicode = { package = "ee-xi-unicode", path = "crates/xi-unicode", version = "0.8.4" }
xi-lsp-lib = { package = "ee-xi-lsp-lib", path = "crates/xi-lsp-lib", version = "0.8.4" }
