[package]
name = "ee-fuzz"
version = "0.8.6"
edition = "2024"
rust-version = "1.95"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = "0.4.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
xi-core-lib = { package = "ee-xi-core-lib", path = "../crates/xi-core-lib", version = "0.8.6" }
xi-plugin-lib = { package = "ee-xi-plugin-lib", path = "../crates/xi-plugin-lib", version = "0.8.6" }
xi-rope = { package = "ee-xi-rope", path = "../crates/xi-rope", version = "0.8.6" }
xi-rpc = { package = "ee-xi-rpc", path = "../crates/xi-rpc", version = "0.8.6" }
xi-lsp-lib = { package = "ee-xi-lsp-lib", path = "../crates/xi-lsp-lib", version = "0.8.6" }
xi-unicode = { package = "ee-xi-unicode", path = "../crates/xi-unicode", version = "0.8.6" }

[[bin]]
name = "xi_rope_crdt"
path = "fuzz_targets/xi_rope_crdt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xi_rpc_parse"
path = "fuzz_targets/xi_rpc_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xi_lsp_transport"
path = "fuzz_targets/xi_lsp_transport.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xi_core_config"
path = "fuzz_targets/xi_core_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xi_core_text"
path = "fuzz_targets/xi_core_text.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xi_plugin_wasm"
path = "fuzz_targets/xi_plugin_wasm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xi_rope_compare"
path = "fuzz_targets/xi_rope_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "xi_unicode_text"
path = "fuzz_targets/xi_unicode_text.rs"
test = false
doc = false
bench = false
