[package]
name = "ee-cli"
version = "0.8.8"
build = "build.rs"
license = "Apache-2.0"
authors = ["Edward Fitz Abucay <gh:ffimnsr>"]
description = "Large file viewer and editor for the terminal, built on top of xi-core backend."
categories = ["text-editors", "command-line-utilities", "development-tools"]
homepage = "https://github.com/ffimnsr/ee"
repository = "https://github.com/ffimnsr/ee"
readme = "../../README.md"
keywords = ["text-editor", "terminal", "cli", "command-line", "editor"]
exclude = [".gitignore"]
edition.workspace = true
rust-version.workspace = true
autobenches = false
default-run = "ee"

[[bin]]
name = "ee"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
dirs.workspace = true
globset.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
ratatui.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
similar = "2.7.0"
tokio.workspace = true
toml.workspace = true
unicode-width = "0.2"
xi-lsp-lib.workspace = true
xi-rpc.workspace = true
xi-core-lib.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
xi-core-lib = { workspace = true, features = ["test-grammars"] }

[build-dependencies]
chrono.workspace = true

[[bench]]
name = "vlf"
harness = false
