[package]
name = "ee-tui"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Edward Fitz Abucay <gh:ffimnsr>"]
description = "Terminal UI frontend for ee-editor"
categories = ["text-editors"]
repository = "https://github.com/ffimnsr/ee"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ee"
path = "src/main.rs"

[dependencies]
crossterm.workspace = true
dirs.workspace = true
globset.workspace = true
ignore.workspace = true
ratatui.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
syntect.workspace = true
toml.workspace = true
unicode-width = "0.2"
xi-rpc.workspace = true

[dependencies.xi-core-lib]
workspace = true
