[package]
name = "xi-core-lib"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
description = "Library module for xi-core"
repository = "https://github.com/ffimnsr/ee"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
fs2.workspace = true
jsonschema.workspace = true
libc.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["rc", "derive"] }
serde_json.workspace = true
toml.workspace = true
notify = { workspace = true, optional = true }
regex.workspace = true
memchr.workspace = true
semver.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util = { workspace = true }
wasmtime = { workspace = true }

xi-rope = { workspace = true, features = ["serde"] }
xi-unicode.workspace = true
xi-rpc.workspace = true
syntect.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
unicode-width.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["notify"]
