[package]
name = "xi-core-lib"
version = "0.8.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
description = "Library module for xi-core"
repository = "https://github.com/ffimnsr/ee"
edition.workspace = true
rust-version.workspace = true
autobenches = false

[dependencies]
bytecount.workspace = true
log.workspace = true
fs2.workspace = true
jsonschema.workspace = true
libc.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["rc", "derive"] }
serde_json.workspace = true
toml.workspace = true
notify = { workspace = true, optional = true }
regex.workspace = true
memchr.workspace = true
semver.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util = { workspace = true }
wasmtime = { workspace = true }

xi-rope = { workspace = true, features = ["serde"] }
xi-unicode.workspace = true
xi-rpc.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-c.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-css.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-go.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-html.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-php.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-typescript.workspace = true
unicode-width.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[features]
default = ["notify"]

[[bench]]
name = "wrap"
harness = false
