[package]
name = "ee-xi-core-lib"
version = "0.8.5"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
description = "Library module for xi-core"
repository = "https://github.com/ffimnsr/ee"
edition.workspace = true
rust-version.workspace = true
autobenches = false

[lib]
name = "xi_core_lib"

[dependencies]
bytecount.workspace = true
cc.workspace = true
log.workspace = true
fs2.workspace = true
dirs.workspace = true
jsonschema.workspace = true
libc.workspace = true
schemars.workspace = true
globset.workspace = true
serde = { workspace = true, features = ["rc", "derive"] }
serde_json.workspace = true
toml.workspace = true
notify = { workspace = true, optional = true }
regex.workspace = true
memchr.workspace = true
semver.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util = { workspace = true }
wasmtime = { workspace = true }

xi-rope = { workspace = true, features = ["serde"] }
xi-unicode.workspace = true
xi-rpc.workspace = true
tree-sitter.workspace = true
tree-sitter-loader.workspace = true
unicode-width.workspace = true
ee-ts-test-grammars = { path = "../ee-ts-test-grammars", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
ee-ts-test-grammars = { path = "../ee-ts-test-grammars" }

[features]
default = ["notify"]
test-grammars = ["dep:ee-ts-test-grammars"]

[[bench]]
name = "wrap"
harness = false
