[package]
name = "ee-xi-core"
version = "0.8.2"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
description = "Main process for xi-core, based on json-rpc"
categories = ["text-editors"]
repository = "https://github.com/ffimnsr/ee"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
fern.workspace = true
log.workspace = true
dirs.workspace = true

[dependencies.xi-core-lib]
workspace = true

[dependencies.xi-rpc]
workspace = true
