[package]
name = "xi-lsp-lib"
version = "0.8.1"
license = "Apache-2.0"
repository = "https://github.com/ffimnsr/ee"
description = "The base library for implementing LSP Plugins for Xi"
authors = ["betterclever <paliwal.pranjal83@gmail.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
lsp-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

jsonrpc-lite.workspace = true
fern.workspace = true
log.workspace = true
chrono.workspace = true
url.workspace = true
lsp-server = { workspace = true }
tokio-util = { workspace = true }

[dependencies.xi-plugin-lib]
workspace = true

[dependencies.xi-core-lib]
workspace = true

[dependencies.xi-rope]
workspace = true

[dependencies.xi-rpc]
workspace = true

[[bin]]
name = "xi_lsp_fake_server"
path = "tests/support/fake_language_server.rs"
