[package]
name = "xi-plugin-derive"
version = "0.8.2"
license = "Apache-2.0"
authors = ["Edward Fitz Abucay <gh:ffimnsr>"]
repository = "https://github.com/ffimnsr/ee"
description = "Proc macros for xi-plugin-lib plugin scaffolding."
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
