[package]
name = "xi-plugin-lib"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
repository = "https://github.com/ffimnsr/ee"
description = "The library base for implementing xi-editor plugins."
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytecount.workspace = true
rand.workspace = true
memchr.workspace = true
log.workspace = true
tracing.workspace = true
tokio-util = { workspace = true }
xi-plugin-derive.workspace = true

[dependencies.xi-rpc]
workspace = true

[dependencies.xi-core-lib]
workspace = true

[dependencies.xi-rope]
workspace = true

[dev-dependencies]
tempfile.workspace = true
