[package]
authors = ["Raph Levien <raph@google.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
description = "A generic rope data structure built on top of B-Trees."
license = "Apache-2.0"
name = "xi-rope"
repository = "https://github.com/ffimnsr/ee"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
autobenches = false

[dependencies]
bytecount.workspace = true
memchr.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
unicode-segmentation.workspace = true
regex.workspace = true
im = "15.1.0"

[dev-dependencies]
criterion.workspace = true
proptest = "1.6"
serde_test = "^1.0"
serde_json.workspace = true

[features]
default = []
serde = ["dep:serde", "im/serde"]

[[bench]]
name = "cursors"
harness = false

[[bench]]
name = "diff"
harness = false

[[bench]]
name = "edit"
harness = false

[[bench]]
name = "rope_builder"
harness = false
