[package]
name = "xi-rpc"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "Utilities for building peers (both client and server side) for xi's JSON RPC variant."
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
crossbeam-utils.workspace = true

xi-trace.workspace = true
