[package]
name = "ee-xi-rpc"
version = "0.8.7"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
repository = "https://github.com/ffimnsr/ee"
description = "Utilities for building peers (both client and server side) for xi's JSON RPC variant."
edition.workspace = true
rust-version.workspace = true

[lib]
name = "xi_rpc"

[dependencies]
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
jsonrpc-lite = { workspace = true }
