[package]
name = "xi-trace"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Vitali Lovich <vlovich@google.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
categories = ["development-tools::profiling"]
repository = "https://github.com/ffimnsr/ee"
description = "Library-based distributed tracing API to meet the needs of xi-core, frontends and plugins"
edition.workspace = true
rust-version.workspace = true

[features]
benchmarks = []
default = ["chrome_trace_event"]
json_payload = ["serde_json"]
getpid = []
chrome_trace_event = ["serde_json"]

[dependencies]
serde_json = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
libc.workspace = true
log.workspace = true
