[package]
name = "xi-unicode"
version = "0.8.1"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
repository = "https://github.com/ffimnsr/ee"
description = "Unicode utilities useful for text editing, including a line breaking iterator."
edition.workspace = true
rust-version.workspace = true
autobenches = false

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
