[package]
name = "ee-xi-unicode"
version = "0.8.4"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
repository = "https://github.com/ffimnsr/ee"
description = "Unicode utilities useful for text editing, including a line breaking iterator."
edition.workspace = true
rust-version.workspace = true
autobenches = false

[lib]
name = "xi_unicode"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
