[package]
name = "xi-lang"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "A language syntax coloring and indentation plugin for xi-editor."
edition.workspace = true
rust-version.workspace = true

[dependencies]
pom = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
nom = { workspace = true, optional = true }
combine = { workspace = true, optional = true }

[dependencies.xi-plugin-lib]
workspace = true

[dependencies.xi-core-lib]
workspace = true

[dependencies.xi-rope]
workspace = true

[dependencies.xi-trace]
workspace = true
