[package]
name = "xi-lang"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>", "Edward Fitz Abucay <gh:ffimnsr>"]
repository = "https://github.com/ffimnsr/ee"
description = "A language syntax coloring and indentation plugin for xi-editor."
edition.workspace = true
rust-version.workspace = true

[dependencies]

[dependencies.xi-plugin-lib]
workspace = true

[dependencies.xi-core-lib]
workspace = true

[dependencies.xi-rope]
workspace = true

[dependencies.xi-trace]
workspace = true
